// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSemanticDiagnostics reports errors for a complex single file 1`] = `
Array [
  Object {
    "category": 1,
    "code": 110008,
    "column": 72,
    "file": "complex.ts",
    "length": 10,
    "line": 20,
    "messageText": "Duplicate event. Only one event is allowed per name.",
    "source": "neo-one",
    "start": 393,
  },
  Object {
    "category": 1,
    "code": 110017,
    "column": 37,
    "file": "complex.ts",
    "length": 19,
    "line": 41,
    "messageText": "Argument to Address.from must be a string literal address.",
    "source": "neo-one",
    "start": 1089,
  },
]
`;

exports[`getSemanticDiagnostics reports errors for a simple single file 1`] = `
Array [
  Object {
    "category": 1,
    "code": 110017,
    "column": 0,
    "file": "simple.ts",
    "length": 19,
    "line": 2,
    "messageText": "Argument to Address.from must be a string literal address.",
    "source": "neo-one",
    "start": 52,
  },
]
`;

exports[`getSemanticDiagnostics reports no errors for a complex valid single file 1`] = `Array []`;
